[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/ui/player_ui/action_ui/assets/blink_item.png" type="Texture" id=1]
[ext_resource path="res://scenes/ui/player_ui/action_ui/action_ui_tile/action_ui_tile.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/fonts/action_hotkey_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/ui/fonts/action_cooldown_font.tres" type="DynamicFont" id=4]

[sub_resource type="Animation" id=2]
resource_name = "Idle"

[sub_resource type="Animation" id=3]
resource_name = "Triggered"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.25 ),
"transitions": PoolRealArray( -2, -0.5, 2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}

[node name="ActionUITile" type="Control"]
margin_left = -32.0
margin_top = -32.0
margin_right = -32.0
margin_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource( 2 )
default_modulate = Color( 1, 1, 1, 1 )
not_ready_modulate = Color( 1, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Triggered = SubResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 1 )
stretch_mode = 1

[node name="CooldownLabel" type="Label" parent="."]
margin_right = 64.0
margin_bottom = 64.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = ExtResource( 4 )
align = 1
valign = 1
clip_text = true
max_lines_visible = 1

[node name="HotkeyLabel" type="Label" parent="."]
margin_right = 64.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
uppercase = true
